@@ -1,6 +1,7 @@
 package com.av.java8.stream;
 
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.List;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -36,7 +37,7 @@ public class StreamFlatMap {
                                                         );
 
         List<Integer> flattenedList = nestedLists.stream()
-                                                .flatMap(stream -> stream.stream()) // converting list<list> into list
+                                                .flatMap(Collection::stream) // converting list<list> into list
                                                 .collect(Collectors.toList()); // collecting as list
 
         System.out.println(flattenedList); // Output: [1, 2, 3, 4, 5, 6, 7, 8, 9]
@@ -67,7 +68,7 @@ public class StreamFlatMap {
                                                             Stream.of(7, 8,8, 9)
                                                             );
 
-        List<Integer> flattenedStream = streamOfStreams.flatMap(Function.identity()).collect(Collectors.toList());
+        List<Integer> flattenedStream = streamOfStreams.flatMap(Function.identity()).toList();
         System.out.println("Stream of Stream "+flattenedStream);
     }
     public static void main(String[] args) {
